--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <h1>UnknownGaming</h1>
 <p>Welcome to the Official Site for UnknownGaming!</p>
+
+<p>Sign up here<p>
+
+<p>Find us on [Facebook](http://fb.com/unknowngamingusa)<p>
