home page edit 3

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
 
 <p>Sign up here<p>
 
-<p>Find us on [Facebook](http://fb.com/unknowngamingusa)<p>
+<p>Find us on Facebook at http://fb.com/unknowngamingusa<p>
