about and schedule pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
+<%= link_to "Home", root_path %>
+<%= link_to "About", about_path %>
+<%= link_to "Schedule", schedule_path %>
 <h1>UnknownGaming</h1>
 <p>Welcome to the Official Site for UnknownGaming!</p>
 
-<p>Sign up here<p>
+<p>Sign up <%= link_to "here", "#" %><p>
 
-<p>Find us on Facebook at http://fb.com/unknowngamingusa<p>
+<p>Find us on <%= link_to "Facebook", "http://fb.com/unknowngamingusa" %><p>
